opam-version: "2.0"
synopsis: "Personal web's corner"
version: "dev"
maintainer: "xvw"
authors: ["xvw"]
homepage: "https://github.com/xvw/planet"
bug-reports: "https://github.com/xvw/planet/issues"
dev-repo: "git+https://github.com/xvw/planet.git"
license: "MIT"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name ] {with-doc}
  ["dune" "runtest" "-p" name] {with-test}
]

depopts: [
  "base-unix"
  "base-threads"
] 

depends: [
  "dune" {build}
  "odoc" {with-doc}
  "ocaml" { >= "4.08.0" }
  "alcotest" {with-test}
  "js_of_ocaml-compiler" {build & >= "3.0" & < "4.0"}
  "js_of_ocaml-ppx" {build & >= "3.0" & < "4.0"}
  "js_of_ocaml-lwt" {>= "3.0" & < "4.0"}
  "js_of_ocaml-tyxml" {>= "3.0" & < "4.0"}
  "js_of_ocaml" {>= "3.0" & < "4.0"}
  "tyxml"
  "lwt_ppx" {build}
  "cmdliner"
]
